@@ -35,4 +35,10 @@ class TestTGPlugun(unittest.TestCase):
         ]
 
         assert tl.load_template('subdir.index').module_id == '_subdir_index_html'
+    
+    def test_string(self):
+        t = tl.load_template('foo', "hello world")
+        assert t.render() == "hello world"
         
+if __name__ == '__main__':
+    unittest.main()
